--- a/MINIPROJECT/templates/result.html
+++ b/MINIPROJECT/templates/result.html
@@ -10,7 +10,9 @@
 <body>
     <div class="main">
         <h1> Results </h1>
-            
+        <div>
+          <img src="{{ url_for('static', filename='figure6.jpg') }}" alt="Image">
+        </div>   
     </div>
 </body>
 </html>
